--- a/front/info.html
+++ b/front/info.html
@@ -29,6 +29,7 @@
 					<p><strong>Kelas:</strong><br><span id="info_class"></span></p>
 					<p><strong>Kecamatan:</strong><br><span id="info_kec"></span></p>
 					<h2>Metode Tempuh</h2>
+					<div id="directions-panel" class="col-xs-8">
 					<p>{ dari google maps api }</p>
 				
 				</div>
